--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <!-- chart testing -->
+    <canvas id="doughnutChart"></canvas>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
+        <script src="/javascripts/dataViz.js"></script>
   </body>
 </html>
