--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,36 +1,49 @@
 .hidden {
-  display: none;
-}
+  display: none; }
 
 body {
-  padding: 50px;
-  font-family: "Montserrat", sans-serif;
-}
+  padding: 25px;
+  /*margin-top: 20%;*/
+  font-family: 'Montserrat', sans-serif; }
 
 a {
   color: #24343b;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
-li {
+#menu {
+  visibility: hidden;
+  height: 0px; }
+
+#container {
+  margin-top: -20%; }
+
+#burgerMenu {
+  margin-right: auto;
+  background-color: red; }
+
+#navigation li {
   list-style: none;
-}
+  text-align: left;
+  margin-left: -40%; }
+
+#nativation ul {
+  text-align: left;
+  list-style: none; }
 
 #bmIcon {
   color: #d49b29;
-}
+  background-color: green;
+  margin-left: -5%;
+  margin-top: -30%; }
 
 img {
-  border-radius: 50%;
-}
+  border-radius: 50%; }
 
 #dashboard {
   display: flex;
-  flex-direction: row;
-}
+  flex-direction: row; }
 
 .temperature:hover {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
