--- a/app/css/style.css
+++ b/app/css/style.css
@@ -60,7 +60,19 @@ img {
 
 #doughnutChartsCon {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1));
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.sensorCon {
+  position: relative;
+}
+
+.sensorData {
+  /*chart text centering https://jsfiddle.net/mgyp0jkk/ */
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /*# sourceMappingURL=style.css.map */
