--- a/app/css/style.css
+++ b/app/css/style.css
@@ -111,9 +111,10 @@ img {
 .sensorData {
   /*chart text centering https://jsfiddle.net/mgyp0jkk/ */
   position: absolute;
-  top: 40%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 40px;
 }
 
 #footerMenu {
