Added responsive styling to doughnut charts

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -103,7 +103,7 @@ a {
 
 #doughnutChartsCon {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .sensorCon {
@@ -116,7 +116,7 @@ a {
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 40px;
+  font-size: 20px;
 }
 
 #footerMenu {
@@ -181,6 +181,14 @@ a {
 
   #footerMenu {
     font-size: 18px;
+  }
+
+  #doughnutChartsCon {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .sensorData {
+    font-size: 40px;
   }
 }
 
