--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -174,6 +174,23 @@ body {
   }
 }
 
+#welcome h1 {
+  margin-bottom: 25px;
+}
+
+#scrollDownCon {
+  color: $primaryColor;
+  font-size: 70px;
+  text-align: center;
+  position: absolute;
+  top: 80%;
+  left: 43%;
+}
+
+#scrollDownCon:hover {
+  cursor: pointer;
+}
+
 /*desktop mode*/
 @media screen and (min-width: $desktopWidth) {
   #burgerMenu, #bmIcon {
@@ -237,6 +254,6 @@ body {
   }
 
   .sensorData {
-    font-size: 40px;
+    font-size: 4vw;
   }
 }
