--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -33,7 +33,7 @@ body {
     padding: 80px;
     /*margin-top: 20%;*/
     font-family: $montserratRegular;
-    background-color: #f6f6f6;
+    background-color: rgb(248, 248, 248);
     background-image: url("../images/plantbg.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
