--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,3 +1,7 @@
+.hidden {
+  display: none;
+}
+
 body {
   padding: 80px;
   font-family: "Montserrat", sans-serif;
@@ -12,6 +16,10 @@ a {
 #logo {
   margin-left: 70px;
   margin-bottom: 20px;
+}
+
+button {
+  text-align: center;
 }
 
 .button {
@@ -113,6 +121,9 @@ h3 {
     margin-bottom: 20px;
   }
 
+  #main {
+    margin: 0 auto;
+  }
   #main #form {
     margin-top: 20px;
   }
